Fix Chinese benchmark notebook

--- a/Benchmark_Chinese.ipynb
+++ b/Benchmark_Chinese.ipynb
@@ -543,21 +543,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tested: 181\n",
-      "# Correct: 61\n",
-      "# Wrong: 120\n",
-      "% correct: 33.7016574586\n",
-      "Processing time: 53.0855669975 seconds\n",
-      "Precision: 0.657142857143\n",
-      "Recall: 0.33925170068\n",
-      "F-1: 0.421756338899\n"
+      "# Tested: 166\n",
+      "# Correct: 122\n",
+      "# Wrong: 44\n",
+      "% correct: 73.4939759036\n",
+      "Processing time: 50.9479968548 seconds\n",
+      "Precision: 0.9375\n",
+      "Recall: 0.719345238095\n",
+      "F-1: 0.784052579365\n"
      ]
     }
    ],
