Update all benchmark notebooks

--- a/Benchmark_Cantonese.ipynb
+++ b/Benchmark_Cantonese.ipynb
@@ -10,7 +10,9 @@
     "import requests\n",
     "import json\n",
     "import time\n",
-    "from sklearn.metrics import precision_recall_fscore_support"
+    "from sklearn.metrics import precision_recall_fscore_support\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -25,7 +27,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv(train_data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df_o = train_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = pd.read_csv(test_data_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add training data\n",
+    "\n",
+    "test_size = 0.4 * (len(train_df) + len(test_df)) / len(test_df)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(test_df['question'], test_df['intent'],\n",
+    "                                                    test_size=test_size, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -92,19 +135,31 @@
        "4                       如何聯絡AIG旅遊的緊急服務團隊？  596f041146fa08f7d2e84022"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df = pd.read_csv(train_data_path, encoding='utf-8')\n",
+    "train_df = pd.concat([train_df, pd.DataFrame({'intent': y_train, 'question': X_train})], sort=False)\n",
     "train_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variations = defaultdict(list)\n",
+    "\n",
+    "for intent, question in zip(train_df['intent'], train_df['question']):\n",
+    "    variations[intent].append(question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,56 +189,56 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>19</th>\n",
+       "      <td>596f056046fa08f7d2e8405e</td>\n",
+       "      <td>保單可以保障哪些醫療開支？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>591bcfcd94cab79e6d265527</td>\n",
+       "      <td>取消旅程要唔要俾自負額？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>596f041146fa08f7d2e84022</td>\n",
+       "      <td>有沒有緊急服務熱線？</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
        "      <td>59717c017cf3bfd43b62ec57</td>\n",
-       "      <td>AIG 有冇緊急服務嘅電話號碼？</td>\n",
+       "      <td>如果我一次過去幾個國家，旅遊保險可以保障嗎？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>591bdba194cab79e6d26554c</td>\n",
-       "      <td>Claim保險前洗唔洗俾一筆錢？</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>591bdba194cab79e6d26554c</td>\n",
-       "      <td>do i need 承擔自負額</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>145</th>\n",
        "      <td>596f041146fa08f7d2e84025</td>\n",
-       "      <td>Exchange可唔可以買呢份旅遊保險？</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5910b2b7722b5c5f63cfdc53</td>\n",
-       "      <td>Password有冇得改？</td>\n",
+       "      <td>更改行程可唔可以索償？</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     intent              question\n",
-       "0  59717c017cf3bfd43b62ec57      AIG 有冇緊急服務嘅電話號碼？\n",
-       "1  591bdba194cab79e6d26554c      Claim保險前洗唔洗俾一筆錢？\n",
-       "2  591bdba194cab79e6d26554c       do i need 承擔自負額\n",
-       "3  596f041146fa08f7d2e84025  Exchange可唔可以買呢份旅遊保險？\n",
-       "4  5910b2b7722b5c5f63cfdc53         Password有冇得改？"
+       "                       intent                question\n",
+       "19   596f056046fa08f7d2e8405e           保單可以保障哪些醫療開支？\n",
+       "42   591bcfcd94cab79e6d265527            取消旅程要唔要俾自負額？\n",
+       "153  596f041146fa08f7d2e84022              有沒有緊急服務熱線？\n",
+       "78   59717c017cf3bfd43b62ec57  如果我一次過去幾個國家，旅遊保險可以保障嗎？\n",
+       "145  596f041146fa08f7d2e84025             更改行程可唔可以索償？"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_df = pd.read_csv(test_data_path, encoding='utf-8')\n",
+    "test_df = pd.DataFrame({'intent': y_test, 'question': X_test})\n",
     "test_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -215,61 +270,54 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>59717c017cf3bfd43b62ec57</td>\n",
-       "      <td>AIG 有冇緊急服務嘅電話號碼？</td>\n",
-       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
+       "      <td>596f056046fa08f7d2e8405e</td>\n",
+       "      <td>保單可以保障哪些醫療開支？</td>\n",
+       "      <td>旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>59717c017cf3bfd43b62ec57</td>\n",
-       "      <td>一份旅遊保險只會包一個國家內的旅行嗎？</td>\n",
-       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
+       "      <td>596f056046fa08f7d2e8405e</td>\n",
+       "      <td>呢份保單包唔包醫療費用？</td>\n",
+       "      <td>旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>59717c017cf3bfd43b62ec57</td>\n",
-       "      <td>呢份旅遊保險系唔系只會包一個目的地嘅旅行？</td>\n",
-       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
+       "      <td>591bcfcd94cab79e6d265527</td>\n",
+       "      <td>取消旅程要唔要俾自負額？</td>\n",
+       "      <td>非香港身分證持有人可否投保旅遊保？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>59717c017cf3bfd43b62ec57</td>\n",
-       "      <td>如果我一次過去幾個國家，呢份旅遊保險會唔會包埋？</td>\n",
-       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
+       "      <td>591bcfcd94cab79e6d265527</td>\n",
+       "      <td>冇身份證買唔買得旅遊保險？</td>\n",
+       "      <td>非香港身分證持有人可否投保旅遊保？</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>59717c017cf3bfd43b62ec57</td>\n",
-       "      <td>如果我一次過去幾個國家，旅遊保險可以保障嗎？</td>\n",
-       "      <td>如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？</td>\n",
+       "      <td>596f041146fa08f7d2e84022</td>\n",
+       "      <td>有沒有緊急服務熱線？</td>\n",
+       "      <td>如何聯絡AIG旅遊的緊急服務團隊？</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     intent                      test  \\\n",
-       "0  59717c017cf3bfd43b62ec57          AIG 有冇緊急服務嘅電話號碼？   \n",
-       "1  59717c017cf3bfd43b62ec57       一份旅遊保險只會包一個國家內的旅行嗎？   \n",
-       "2  59717c017cf3bfd43b62ec57     呢份旅遊保險系唔系只會包一個目的地嘅旅行？   \n",
-       "3  59717c017cf3bfd43b62ec57  如果我一次過去幾個國家，呢份旅遊保險會唔會包埋？   \n",
-       "4  59717c017cf3bfd43b62ec57    如果我一次過去幾個國家，旅遊保險可以保障嗎？   \n",
-       "\n",
-       "                         truth  \n",
-       "0  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
-       "1  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
-       "2  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
-       "3  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  \n",
-       "4  如果我一次過去幾個國家，我需要分開購買幾份旅遊保險嗎？  "
+       "                     intent           test                            truth\n",
+       "0  596f056046fa08f7d2e8405e  保單可以保障哪些醫療開支？  旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？\n",
+       "1  596f056046fa08f7d2e8405e   呢份保單包唔包醫療費用？  旅行時，我生病了，卻沒求診。回港後，我才看病。我仍然能索償嗎？\n",
+       "2  591bcfcd94cab79e6d265527   取消旅程要唔要俾自負額？                非香港身分證持有人可否投保旅遊保？\n",
+       "3  591bcfcd94cab79e6d265527  冇身份證買唔買得旅遊保險？                非香港身分證持有人可否投保旅遊保？\n",
+       "4  596f041146fa08f7d2e84022     有沒有緊急服務熱線？                如何聯絡AIG旅遊的緊急服務團隊？"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_df = test_df.merge(train_df, left_on='intent', right_on='intent')\n",
+    "test_df = test_df.merge(train_df_o, left_on='intent', right_on='intent')\n",
     "test_df.columns = ['intent', 'test', 'truth']\n",
     "test_df.head()"
    ]
@@ -283,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,22 +366,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add intents\n",
     "\n",
-    "for question in train_df['question']:\n",
+    "for intent in variations:\n",
     "\n",
     "    data = {\n",
     "        'categoryId': category_id,\n",
     "        'language': 'zh-hk',\n",
-    "        'question': question,\n",
+    "        'question': intent,\n",
     "        'answer': '-',\n",
     "        'answerFacebook': {},\n",
     "        'labels': [],\n",
-    "        'userSays': [],\n",
+    "        'userSays': variations[intent],\n",
     "        'active': True,\n",
     "    }\n",
     "    \n",
@@ -342,21 +390,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tested: 181\n",
-      "# Correct: 66\n",
-      "# Wrong: 115\n",
-      "% correct: 36.4640883978\n",
-      "Processing time: 48.2330060005 seconds\n",
-      "Precision: 0.411769700887\n",
-      "Recall: 0.389346193023\n",
-      "F-1: 0.366498262887\n"
+      "# Tested: 86\n",
+      "# Correct: 42\n",
+      "# Wrong: 44\n",
+      "% correct: 48.8372093023\n",
+      "Precision: 0.50525210084\n",
+      "Recall: 0.48431372549\n",
+      "F-1: 0.469887955182\n",
+      "Processing time: 67.5716221333 seconds\n"
      ]
     }
    ],
@@ -376,7 +424,7 @@
     "    \n",
     "    r = requests.get('https://hk-demo56.clare.ai/api/v1/MessageBot', params=payload, headers=headers)\n",
     "    \n",
-    "    if json.loads(r.text)[0]['predictionResult']['question'] == test_df['truth'][i]:\n",
+    "    if json.loads(r.text)[0]['predictionResult']['question'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
     "    else:\n",
     "        correct.append(0)\n",
@@ -384,15 +432,15 @@
     "    pred.append(json.loads(r.text)[0]['predictionResult']['question'])\n",
     "        \n",
     "end = time.time()\n",
-    "        \n",
+    "\n",
     "print('# Tested: {}'.format(len(correct)))\n",
     "print('# Correct: {}'.format(sum(correct)))\n",
     "print('# Wrong: {}'.format(len(correct) - sum(correct)))\n",
     "print('% correct: {}'.format(100.0 * sum(correct) / len(correct)))\n",
-    "print('Processing time: {} seconds'.format(end - start))\n",
-    "print('Precision: {}'.format(precision_recall_fscore_support(test_df['truth'], pred, average='macro')[0]))\n",
-    "print('Recall: {}'.format(precision_recall_fscore_support(test_df['truth'], pred, average='macro')[1]))\n",
-    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['truth'], pred, average='macro')[2]))"
+    "print('Precision: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[0]))\n",
+    "print('Recall: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[1]))\n",
+    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))\n",
+    "print('Processing time: {} seconds'.format(end - start))"
    ]
   },
   {
@@ -404,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,17 +465,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create intents\n",
     "\n",
-    "for i, question in enumerate(train_df['question']):\n",
-    "    \n",
+    "for intent in variations:\n",
+    "        \n",
     "    data = {'languageCode': 'zh-HK',\n",
-    "            'name': train_df['intent'][i],\n",
-    "            'userSays': [{'data': [{'text': question}]}],\n",
+    "            'name': intent,\n",
+    "            'userSays': [{'data': [{'text': question} for question in variations[intent]]}],\n",
     "            'auto': True}\n",
     "\n",
     "    r = requests.post(url, data=json.dumps(data), headers=headers)\n",
@@ -440,21 +488,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tested: 181\n",
-      "# Correct: 47\n",
-      "# Wrong: 134\n",
-      "% correct: 25.9668508287\n",
-      "Processing time: 35.3327209949 seconds\n",
-      "Precision: 0.628571428571\n",
-      "Recall: 0.270476190476\n",
-      "F-1: 0.349715522573\n"
+      "# Tested: 86\n",
+      "# Correct: 15\n",
+      "# Wrong: 71\n",
+      "% correct: 17.4418604651\n",
+      "Precision: 0.342857142857\n",
+      "Recall: 0.166666666667\n",
+      "F-1: 0.218095238095\n",
+      "Processing time: 17.8180029392 seconds\n"
      ]
     }
    ],
@@ -480,7 +528,7 @@
     "        pred.append(r['result']['metadata']['intentName'])\n",
     "    else:\n",
     "        correct.append(0)\n",
-    "        pred.append('-')\n",
+    "        pred.append('')\n",
     "        \n",
     "end = time.time()\n",
     "        \n",
@@ -488,10 +536,10 @@
     "print('# Correct: {}'.format(sum(correct)))\n",
     "print('# Wrong: {}'.format(len(correct) - sum(correct)))\n",
     "print('% correct: {}'.format(100.0 * sum(correct) / len(correct)))\n",
-    "print('Processing time: {} seconds'.format(end - start))\n",
     "print('Precision: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[0]))\n",
     "print('Recall: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[1]))\n",
-    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))"
+    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))\n",
+    "print('Processing time: {} seconds'.format(end - start))"
    ]
   },
   {
@@ -503,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,36 +573,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Add intents\n",
     "\n",
-    "for i, question in enumerate(train_df['question']):\n",
+    "for intent in variations:\n",
     "    r = assistant.create_intent(\n",
-    "        workspace_id='314cdbae-1126-47fd-835e-00d1fe529d2b',\n",
-    "        intent=train_df['intent'][i],\n",
-    "        examples=[{'text': question}]).get_result()"
+    "        workspace_id='d1e1e46c-5fb3-45a8-8578-d157aa908f1b',\n",
+    "        intent=intent,\n",
+    "        examples=[{'text': question} for question in variations[intent]]).get_result()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Tested: 181\n",
-      "# Correct: 61\n",
-      "# Wrong: 120\n",
-      "% correct: 33.7016574586\n",
-      "Processing time: 53.0855669975 seconds\n",
-      "Precision: 0.657142857143\n",
-      "Recall: 0.33925170068\n",
-      "F-1: 0.421756338899\n"
+      "# Tested: 86\n",
+      "# Correct: 49\n",
+      "# Wrong: 37\n",
+      "% correct: 56.976744186\n",
+      "Precision: 0.742857142857\n",
+      "Recall: 0.501904761905\n",
+      "F-1: 0.585328798186\n",
+      "Processing time: 27.8240060806 seconds\n"
      ]
     }
    ],
@@ -566,18 +614,18 @@
     "correct, pred = [], []\n",
     "for i, question in enumerate(test_df['test']):\n",
     "    r = assistant.message(\n",
-    "        workspace_id='314cdbae-1126-47fd-835e-00d1fe529d2b',\n",
+    "        workspace_id='d1e1e46c-5fb3-45a8-8578-d157aa908f1b',\n",
     "        input={\n",
     "            'text': question\n",
     "        }\n",
     "    ).get_result()\n",
     "    \n",
-    "    if r['intents'] and r['intents'][0]['intent'] == test_df['intent'][i]:\n",
+    "    if r['intents'][0]['intent'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
     "        pred.append(r['intents'][0]['intent'])\n",
     "    else:\n",
     "        correct.append(0)\n",
-    "        pred.append('-')\n",
+    "        pred.append('')\n",
     "        \n",
     "end = time.time()\n",
     "        \n",
@@ -585,11 +633,18 @@
     "print('# Correct: {}'.format(sum(correct)))\n",
     "print('# Wrong: {}'.format(len(correct) - sum(correct)))\n",
     "print('% correct: {}'.format(100.0 * sum(correct) / len(correct)))\n",
-    "print('Processing time: {} seconds'.format(end - start))\n",
     "print('Precision: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[0]))\n",
     "print('Recall: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[1]))\n",
-    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))"
+    "print('F-1: {}'.format(precision_recall_fscore_support(test_df['intent'], pred, average='macro')[2]))\n",
+    "print('Processing time: {} seconds'.format(end - start))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
