Update general benchmark notebooks

--- a/Benchmark_Cantonese_general.ipynb
+++ b/Benchmark_Cantonese_general.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -447,11 +447,11 @@
      "output_type": "stream",
      "text": [
       "# Tested: 118\n",
-      "# Correct: 64\n",
-      "# Wrong: 54\n",
-      "% correct: 54.2372881356\n",
-      "# false positives: 35\n",
-      "Processing time: 94.8365240097 seconds\n"
+      "# Correct: 79\n",
+      "# Wrong: 39\n",
+      "% correct: 66.9491525424\n",
+      "# false positives: 3\n",
+      "Processing time: 75.8179199696 seconds\n"
      ]
     }
    ],
@@ -464,18 +464,19 @@
     "false_pos = 0\n",
     "for i, question in enumerate(test_df['question']):\n",
     "    \n",
-    "    payload = {\n",
-    "        'Query': question,\n",
-    "        'SessionId': str(i),\n",
-    "        'Language': 'zh-hk'\n",
-    "    }\n",
+    "    payload = {'dbName': 'hkDemo56',\n",
+    "               'logging': 1,\n",
+    "               'classify_intent': 3,\n",
+    "               'autoCorrection': 0,\n",
+    "               'memoryRecentConversations': 0,\n",
+    "               'query': question}\n",
     "    \n",
-    "    r = requests.get('https://hk-demo56.clare.ai/api/v1/MessageBot', params=payload, headers=headers)\n",
+    "    r = requests.get('http://35.160.77.29:58074/word2vec/most_similar_sentence_zh', params=payload)\n",
     "    \n",
-    "    if json.loads(r.text)[0]['predictionResult']['question'] == test_df['intent'][i]:\n",
+    "    if json.loads(r.text)['results'][0]['Question'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
     "    else:\n",
-    "        if json.loads(r.text)[0]['predictionResult']['score'] > 0.7:\n",
+    "        if json.loads(r.text)['results'][0]['Score'] > 0.8:\n",
     "            false_pos += 1\n",
     "        correct.append(0)\n",
     "\n",
@@ -498,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +522,7 @@
     "        \n",
     "    data = {'languageCode': 'zh-HK',\n",
     "            'name': intent,\n",
-    "            'userSays': [{'data': [{'text': question} for question in variations[intent]]}],\n",
+    "            'userSays': [{'data': [{'text': question}]} for question in variations[intent]],\n",
     "            'auto': True}\n",
     "\n",
     "    r = requests.post(url, data=json.dumps(data), headers=headers)\n",
@@ -534,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -542,11 +543,11 @@
      "output_type": "stream",
      "text": [
       "# Tested: 118\n",
-      "# Correct: 42\n",
-      "# Wrong: 76\n",
-      "% correct: 35.593220339\n",
+      "# Correct: 67\n",
+      "# Wrong: 51\n",
+      "% correct: 56.7796610169\n",
       "# false positives: 0\n",
-      "Processing time: 19.9518330097 seconds\n"
+      "Processing time: 24.3930449486 seconds\n"
      ]
     }
    ],
@@ -572,7 +573,7 @@
     "        if r['result']['metadata']['intentName'] == test_df['intent'][i]:\n",
     "            correct.append(1)\n",
     "        else:\n",
-    "            if r['result']['score'] > 0.7:\n",
+    "            if r['result']['score'] > 0.8:\n",
     "                false_pos += 1\n",
     "            correct.append(0)\n",
     "    else:\n",
@@ -597,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -642,11 +643,11 @@
      "output_type": "stream",
      "text": [
       "# Tested: 118\n",
-      "# Correct: 73\n",
-      "# Wrong: 45\n",
-      "% correct: 61.8644067797\n",
-      "# false positives: 6\n",
-      "Processing time: 32.6763989925 seconds\n"
+      "# Correct: 77\n",
+      "# Wrong: 41\n",
+      "% correct: 65.2542372881\n",
+      "# false positives: 2\n",
+      "Processing time: 34.7310609818 seconds\n"
      ]
     }
    ],
@@ -668,7 +669,7 @@
     "    if r['intents'] and r['intents'][0]['intent'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
     "    else:\n",
-    "        if r['intents'] and r['intents'][0]['confidence'] > 0.7:\n",
+    "        if r['intents'] and r['intents'][0]['confidence'] > 0.8:\n",
     "            correct.append(0)\n",
     "            false_pos += 1\n",
     "        else:\n",
