--- a/Benchmark_English_general.ipynb
+++ b/Benchmark_English_general.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -461,11 +461,11 @@
      "output_type": "stream",
      "text": [
       "# Tested: 113\n",
-      "# Correct: 66\n",
-      "# Wrong: 47\n",
-      "% correct: 58.407079646\n",
-      "# false positives: 17\n",
-      "Processing time: 46.3051729202 seconds\n"
+      "# Correct: 69\n",
+      "# Wrong: 44\n",
+      "% correct: 61.0619469027\n",
+      "# false positives: 0\n",
+      "Processing time: 80.9423370361 seconds\n"
      ]
     }
    ],
@@ -478,18 +478,19 @@
     "false_pos = 0\n",
     "for i, question in enumerate(test_df['question']):\n",
     "    \n",
-    "    payload = {\n",
-    "        'Query': question,\n",
-    "        'SessionId': str(i),\n",
-    "        'Language': 'en-us'\n",
-    "    }\n",
+    "    payload = {'dbName': 'hkDemo56',\n",
+    "               'logging': 1,\n",
+    "               'classify_intent': 3,\n",
+    "               'autoCorrection': 0,\n",
+    "               'memoryRecentConversations': 0,\n",
+    "               'query': question}\n",
     "    \n",
-    "    r = requests.get('https://hk-demo56.clare.ai/api/v1/MessageBot', params=payload, headers=headers)\n",
+    "    r = requests.get('http://35.160.77.29:58074/word2vec/most_similar_sentence_en', params=payload)\n",
     "    \n",
-    "    if json.loads(r.text)[0]['predictionResult']['question'] == test_df['intent'][i]:\n",
+    "    if json.loads(r.text)['results'][0]['Question'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
     "    else:\n",
-    "        if json.loads(r.text)[0]['predictionResult']['score'] > 0.7:\n",
+    "        if json.loads(r.text)['results'][0]['Score'] > 0.8:\n",
     "            false_pos += 1\n",
     "        correct.append(0)\n",
     "\n",
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +536,7 @@
     "        \n",
     "    data = {'languageCode': 'en',\n",
     "            'name': intent,\n",
-    "            'userSays': [{'data': [{'text': question} for question in variations[intent]]}],\n",
+    "            'userSays': [{'data': [{'text': question}]} for question in variations[intent]],\n",
     "            'auto': True}\n",
     "\n",
     "    r = requests.post(url, data=json.dumps(data), headers=headers)\n",
@@ -548,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -556,11 +557,11 @@
      "output_type": "stream",
      "text": [
       "# Tested: 113\n",
-      "# Correct: 60\n",
-      "# Wrong: 53\n",
-      "% correct: 53.0973451327\n",
-      "# false positives: 3\n",
-      "Processing time: 18.7583830357 seconds\n"
+      "# Correct: 67\n",
+      "# Wrong: 46\n",
+      "% correct: 59.2920353982\n",
+      "# false positives: 1\n",
+      "Processing time: 17.5814399719 seconds\n"
      ]
     }
    ],
@@ -586,7 +587,7 @@
     "        if r['result']['metadata']['intentName'] == test_df['intent'][i]:\n",
     "            correct.append(1)\n",
     "        else:\n",
-    "            if r['result']['score'] > 0.7:\n",
+    "            if r['result']['score'] > 0.8:\n",
     "                false_pos += 1\n",
     "            correct.append(0)\n",
     "    else:\n",
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -659,8 +660,8 @@
       "# Correct: 75\n",
       "# Wrong: 38\n",
       "% correct: 66.3716814159\n",
-      "# false positives: 5\n",
-      "Processing time: 30.6130859852 seconds\n"
+      "# false positives: 2\n",
+      "Processing time: 31.3416531086 seconds\n"
      ]
     }
    ],
@@ -682,7 +683,7 @@
     "    if r['intents'] and r['intents'][0]['intent'] == test_df['intent'][i]:\n",
     "        correct.append(1)\n",
     "    else:\n",
-    "        if r['intents'] and r['intents'][0]['confidence'] > 0.7:\n",
+    "        if r['intents'] and r['intents'][0]['confidence'] > 0.8:\n",
     "            correct.append(0)\n",
     "            false_pos += 1\n",
     "        else:\n",
